# oatpp-contacts

./: .clang-format  .env.example  .gitignore  CMakeLists.txt  OatppContacts.kdev4  Readme.md  configure.cpp  configure.hpp  main.cpp
.kdev4/: OatppContacts.kdev4
components/: app.cpp  app.h  configure.cpp  configure.h  database.h  database.hpp
controllers/: contacts-controller.hpp  helloworld.hpp
db/: contacts-db.hpp
db_clients/: contacts-db.hpp
dtos/: contact-dto.hpp  generic-streamlined-response.hpp  paginated-streamlined-response.hpp  search-dto.hpp  stream-line-response.hpp  streamlined-response.hpp
services/: contact-service.cpp  contact-service.hpp
sql/: 001_init.sql
